# django-oscar-announcements

./: .gitignore  .pre-commit-config.yaml  CHANGES.md  Makefile  README.md  pyproject.toml
.github/: assistant-guidelines.md
.github/workflows/: tests.yml
example/: Makefile  manage.py  requirements.in  requirements.txt
example/example_site/: apps.py  settings.py  urls.py
example/example_site/templates/oscar/: base.html
example/example_site/templates/oscar/dashboard/: base.html
oscar_announcements/: __init__.py  apps.py  context_processors.py  models.py  tasks.py  urls.py  utils.py  views.py  visibility.py
oscar_announcements/dashboard/: forms.py  urls.py  views.py
oscar_announcements/management/commands/: cleanup_announcements.py
oscar_announcements/migrations/: 0001_initial.py
oscar_announcements/static/oscar_announcements/css/: announcements.css
oscar_announcements/static/oscar_announcements/js/: announcement_form.js  announcements.js
oscar_announcements/templates/oscar/dashboard/partials/: alert_messages.html
oscar_announcements/templates/oscar/partials/: alert_messages.html
oscar_announcements/templates/oscar_announcements/dashboard/: announcement_confirm_delete.html  announcement_form.html  announcement_list.html
oscar_announcements/templates/oscar_announcements/partials/: announcements.html
oscar_announcements/templatetags/: oscar_announcements_tags.py
tests/: conftest.py  test_context_processors.py  test_integration.py  test_models.py  test_timing.py  test_views.py  urls.py
tests/templates/oscar/dashboard/: layout.html
